test/replaceIndexMulti5.slq
// args: --run

def id[Ï„:*](arg: Ï„)â‡’arg;

def main(){
	n:=3;
	a:=vector(n,0:ğ”¹);
	a=vector(n+1 sub 1,0:ğ”¹);
	a[1]=1:ğ”¹;
	for i in 0..n{ a[i]:=H(a[i]); }
	for i in 0..n-1{
		(a[i],a[i+1]):=id(a[i+1],a[i]);
		(a[i],a[i+1]):=id(a[1+i],a[i]);
		(a[i],a[i+1],a[i]):=id(a[i+1],a[i],a[i]); // error
		(a[i+1],a[i]):=id(a[i],a[i+1]);
		(a[i+1],a[i]):=id(a[i],a[1+i]);
	}
	for i in 0..n{ a[i]:=H(a[i]); }
	return a:ğ”¹[];
}
